--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<section>
 			<h2>Skills</h2>
 			<ul>
-				<li>HTML</li>
+				<li>aws cloud</li>
 				<li>CSS</li>
 				<li>JavaScript</li>
 				<li>jQuery</li>
