--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<div class="container">
 		<header>
-			<h1>DURGA PRASAD</h1>
+			<h1>DURGA</h1>
 			<p>DevOps Engineer</p>
 		</header>
 		<section>
